docs: Added README."fr".md translation via https://github.com/dephraiim/translate-readme